--- a/src/main/resources/net/yoedtos/nikki/external/view/main.fxml
+++ b/src/main/resources/net/yoedtos/nikki/external/view/main.fxml
@@ -34,9 +34,13 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="498.0" prefWidth="632.0">
                     <children>
-                        <Label layoutX="30.0" layoutY="24.0" text="%create.title"/>
+                        <Label layoutX="30.0" layoutY="24.0" text="%create.title">
+                            <font><Font size="15.0"/></font>
+                        </Label>
                         <TextField fx:id="txtTitle" layoutX="20.0" layoutY="54.0" prefHeight="23.0" prefWidth="610.0"/>
-                        <Label layoutX="30.0" layoutY="93.0" text="%create.content"/>
+                        <Label layoutX="30.0" layoutY="93.0" text="%create.content">
+                            <font><Font size="15.0"/></font>
+                        </Label>
                         <HTMLEditor fx:id="htmlContent"
                                     htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;"
                                     layoutX="20.0" layoutY="123.0" prefHeight="404.0" prefWidth="610.0"/>
